--- a/weather/index.html
+++ b/weather/index.html
@@ -396,14 +396,14 @@ Minnesota. Many lakes were ice-free in the year’s final week, forcing the U.S.
   <div class="highlightText">High</div><div class="highlightText">Low</div>
 </div>
 <div class="chart" id="precipHistory"></div>
-<div class="chartTitle">Dewpoint highs by year</div>
+<!-- <div class="chartTitle">Dewpoint highs by year</div>
 <div class="chatter">Highest average dewpoint from June to August by year in Minnesota tracing back more than a century.</div>
 <div class="highlights">
   <div class="highlightNum greenswatch" id="maxDew">0</div><div class="highlightNum precipswatch" id="minDew">0</div>
   <div class="highlightBreak"></div>
   <div class="highlightText">High</div><div class="highlightText">Low</div>
 </div>
-<div class="chart" id="dewChart"></div>
+<div class="chart" id="dewChart"></div> -->
 </div>
 
 <div class="breaker"></div>
