weather chart repair

--- a/weather/index.html
+++ b/weather/index.html
@@ -669,9 +669,9 @@ var chartDewHistory = c3.generate({
             }
         },
         x: {
-           type: 'categories',
+           // type: 'categories',
             tick: {
-                values: ['1903', '1924', '1953', '1982', '2011'],
+                values: [1903, 1924, 1953, 1982, 2011],
                 multiline: false
             }
           }
