--- a/20170117-community_social_media/index.html
+++ b/20170117-community_social_media/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Community Social Media Groups</title>
-  <meta name="description" content="Community Social Media Groups">
+  <title>Metro suburbs community social media groups</title>
+  <meta name="description" content="Metro suburbs community social media groups">
   <meta name="author" content="Frey Hargarten - StarTribune">
   
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.31.0/mapbox-gl.css' rel='stylesheet' />
@@ -47,7 +47,8 @@
 
 <div class="submit"><a href="https://goo.gl/forms/F4JMqQK3jzQ6GHSj1" target="new_">Submit new group</a> | <span class="zoom">Reset View</span> </div>
 
-<div id="filter"><input type="search" id="filter_box" placeholder="Search by group name" /></div>
+<div id="filter"><input type="search" id="filter_box" placeholder="Search by group name or location" /></div>
+<div class="breaker"></div>
 <div id="heading"><div class='tableHead col hSort selected name' data="group">Group</div><div class='tableHead col hSort city' data="city">City</div><div class='tableHead col hSort members' data="members">Members</div><div class='tableHead col hSort privacy' data="privacy">Privacy</div><div class='tableHead col hSort created' data="created">Created</div></div>
 <div id="groupsList"></div>
 </div>
