--- a/20170117-community_social_media/index.html
+++ b/20170117-community_social_media/index.html
@@ -195,7 +195,7 @@ var popup = new mapboxgl.Popup({
 });
 
 map.on('mousemove', function(e) {
-    var features = map.queryRenderedFeatures(e.point, { layers: ['cities-layer-0','cities-layer-1','cities-layer-2','cities-layer-3','cities-layer-0','cities-layer-4','cities-layer-5','cities-layer-6','cities-layer-7','cities-layer-8','cities-layer-9','cities-layer-10','cities-layer-11'] });
+    var features = map.queryRenderedFeatures(e.point, { layers: ['cities-layer'] });
     // Change the cursor style as a UI indicator.
     map.getCanvas().style.cursor = (features.length) ? 'pointer' : '';
 
