--- a/20170117-community_social_media/index.html
+++ b/20170117-community_social_media/index.html
@@ -40,6 +40,7 @@
     .selected { background-color:#ffffff !important; text-decoration:underline; color:#000 !important; }
 
      @media (max-width:520px) { 
+       #wrapper { width:100%; margin-left:auto; margin-right:auto; }
        .created, .city { display:none !important; }
        .col { word-wrap: break-word !important; overflow-wrap: break-word !important; word-break:break-word !important; word-wrap:break-word !important; hyphens:auto !important; }
      }
