--- a/20170117-community_social_media/index.html
+++ b/20170117-community_social_media/index.html
@@ -38,6 +38,7 @@
     .zoom { float:none !important; }
 
     .selected { background-color:#ffffff !important; text-decoration:underline; color:#000 !important; }
+    .rowSelect { opacity:0.8em; }
 
     @media (max-width:520px) { 
      #wrapper { width:100%; margin-left:auto; margin-right:auto; }
@@ -197,8 +198,15 @@ cityList.forEach(function(layer, i) {
     });
    });
 
-    $(".row").click(function() { map.flyTo({ center: [Number($(this).attr("longitude")), Number($(this).attr("latitude"))], zoom: 10 }); });
-    $(".zoom").click(function() { map.flyTo({ center: [-93.2231, 44.9405], zoom: 7 }); });
+    $(".row").click(function() { 
+      map.flyTo({ center: [Number($(this).attr("longitude")), Number($(this).attr("latitude"))], zoom: 10 });
+      $(".row").removeClass("rowSelect");
+      $(this).removeClass("rowSelect");
+    });
+    $(".zoom").click(function() { 
+      $(".row").removeClass("rowSelect");
+      map.flyTo({ center: [-93.2231, 44.9405], zoom: 7 }); 
+    });
 
 // Create a popup, but don't add it to the map yet.
 var popup = new mapboxgl.Popup({
