--- a/20170117-community_social_media/index.html
+++ b/20170117-community_social_media/index.html
@@ -38,7 +38,7 @@
     .zoom { float:none !important; }
 
     .selected { background-color:#ffffff !important; text-decoration:underline; color:#000 !important; }
-    .rowSelect { opacity:0.8em; }
+    .rowSelect { opacity:0.8; }
 
     @media (max-width:520px) { 
      #wrapper { width:100%; margin-left:auto; margin-right:auto; }
