--- a/20170202-mnleg_perdiem/index.html
+++ b/20170202-mnleg_perdiem/index.html
@@ -1,5 +1,3 @@
-<!-- TEXT -->
-
 <!doctype html>
 
 <html lang="en">
@@ -38,8 +36,16 @@
     .offlink { text-align:center !important; }
     .district { font-weight:900; }
 
+/* BUDGET TABLES */
     .label { float:left; width:48%; clear:left; }
     .stat { float:right; width:48%; clear:right; text-align:right; }
+    .bolded { font-weight:900; }
+    .gone { opacity:0; }
+    .info { height:200px; }
+
+/* LEGENDS */
+    .legendContainer { margin-right:auto; margin-left:auto; width:250px; }
+    .legends { text-align:center; }
 
 /*CHARTS*/
     #chart { width:100%; height:430px; }
@@ -74,8 +80,7 @@
     .text { fill:#ffffff !important; font-size:1em; }
     rect:hover, text:hover { background-color:#333 !important; cursor:pointer; opacity:.5; }
 
-    .legends { text-align:center; }
-    .info { height:200px; }
+
 
 /*MOBILE BREAKPOINTS*/
     @media (max-width:500px) {
@@ -86,17 +91,17 @@
 </style> 
 </head>
 
+<!-- 412588323 -->
+
 <body>
 <div id="wrapper">
 
 <div id="topper">
-<span class="offlink"><a href="https://www.gis.leg.mn/iMaps/districts/" target="new_">Who represents me?</a></span> | <span class="zoom">Reset</span>
+<span class="offlink"><a href="http://www.gis.leg.mn/iMaps/districts/" target="new_">Who represents me?</a></span> | <span class="zoom">Reset</span>
 </div>
 
-<div class="breaker"></div>
-
 <div class="chart" id="house">
-<div class="chartTitle">Minnesota House per diem spending</div>
+<div class="chartTitle">Minnesota House per diems and expenses</div>
 
 <div id="mapHState" class="map"><svg width="320" height="350" viewBox="0 0 500 550" preserveAspectRatio="xMidYMid"></svg></div>
 <div id="mapHMetro" class="map metro"><svg width="320" height="350" viewBox="0 0 500 550" preserveAspectRatio="xMidYMid"></svg></div>
@@ -122,7 +127,7 @@
 
 <div class="breaker"></div>
 
-<div id="infoBoxH" class="info">
+<div id="infoBoxH" class="info gone">
 <div class="district"></div>
 <div class='label'>Per diem</div><div class="stat perdiem"></div>
 <div class='label'>Communications</div><div class="stat communications"></div>
@@ -131,14 +136,12 @@
 <div class='label'>Other Travel</div><div class="stat othertravel"></div>
 <div class='label'>Other Expenses</div><div class="stat other"></div>
 <div class='label'>District Expenses</div><div class="stat districtX"></div>
-<div class='label'>Total</div><div class="stat total"></div>
+<div class='label bolded'>Total</div><div class="stat total bolded"></div>
 </div>
 </div>
-
-<div class="breaker"></div>
 
 <div class="chart" id="senate">
-<div class="chartTitle">Minnesota Senate per diem spending</div>
+<div class="chartTitle">Minnesota Senate per diems and expenses</div>
 
 <div id="mapSState" class="map"><svg width="320" height="350" viewBox="0 0 500 550" preserveAspectRatio="xMidYMid"></svg></div>
 <div id="mapSMetro" class="map metro"><svg width="320" height="350" viewBox="0 0 500 550" preserveAspectRatio="xMidYMid"></svg></div>
@@ -164,7 +167,7 @@
 
 <div class="breaker"></div>
 
-<div id="infoBoxS" class="info">
+<div id="infoBoxS" class="info gone">
 <div class="district"></div>
 <div class='label'>Per diem</div><div class="stat perdiem"></div>
 <div class='label'>Communications</div><div class="stat communications"></div>
@@ -244,11 +247,11 @@ d3.json("shapefiles/" + shape, function(error, us) {
 
           if (d.properties.DISTRICT == data2016[i].district){
 
-            if (data2016[i].total >= 30000){ return "purple5"; }
-            else if (data2016[i].total >= 25000){ return "purple4"; }
-            else if (data2016[i].total >= 20000){ return "purple3"; }
-            else if (data2016[i].total >= 10000){ return "purple2"; }
-            else if (data2016[i].total >= 0){ return "purple1"; }
+            if (Number(data2016[i].total) >= 30000){ return "purple5"; }
+            else if (Number(data2016[i].total) >= 25000){ return "purple4"; }
+            else if (Number(data2016[i].total) >= 20000){ return "purple3"; }
+            else if (Number(data2016[i].total) >= 10000){ return "purple2"; }
+            else if (Number(data2016[i].total) >= 0){ return "purple1"; }
           }
         }
         })
@@ -257,19 +260,21 @@ d3.json("shapefiles/" + shape, function(error, us) {
         if (race == "senate") { container = "#infoBoxS"; }
         else if  (race == "house") { container = "#infoBoxH"; }
 
-         $(container + " .district").html("<div>District " + d.properties.DISTRICT + "</div>");
+         $(container).removeClass("gone");
+         
 
         for (var i=0; i < data2016.length; i++){
 
-          if (d.properties.DISTRICT == data2016[i].district){
-         $(container + " .perdiem").html("<div>" + data2016[i].perdiem + "</div>");
-         $(container + " .communications").html("<div>" + data2016[i].communications + "</div>");
-         $(container + " .lodging").html("<div>" + data2016[i].lodging + "</div>");
-         $(container + " .mileage").html("<div>" + data2016[i].mileage + "</div>");
-         $(container + " .othertravel").html("<div>" + data2016[i].other_travel + "</div>");
-         $(container + " .other").html("<div>" + data2016[i].other_expenses + "</div>");
-         $(container + " .districtX").html("<div>" + data2016[i].district_expenses + "</div>");
-          $(container + " .total").html("<div>" + data2016[i].total + "</div>");
+          if (String(d.properties.DISTRICT) == String(data2016[i].district)){
+         $(container + " .district").html("<div>District " + d.properties.DISTRICT + ": " + data2016[i].first + " " + data2016[i].last + " (" + data2016[i].party + ")</div>");
+         $(container + " .perdiem").html("<div>" + d3.format("$,.0f")(Number(data2016[i].perdiem)) + "</div>");
+         $(container + " .communications").html("<div>" + d3.format("$,.0f")(Number(data2016[i].communications)) + "</div>");
+         $(container + " .lodging").html("<div>" + d3.format("$,.0f")(Number(data2016[i].lodging)) + "</div>");
+         $(container + " .mileage").html("<div>" + d3.format("$,.0f")(Number(data2016[i].mileage)) + "</div>");
+         $(container + " .othertravel").html("<div>" + d3.format("$,.0f")(Number(data2016[i].other_travel)) + "</div>");
+         $(container + " .other").html("<div>" + d3.format("$,.0f")(Number(data2016[i].other_expenses)) + "</div>");
+         $(container + " .districtX").html("<div>" + d3.format("$,.0f")(Number(data2016[i].district_expenses)) + "</div>");
+          $(container + " .total").html("<div>" + d3.format("$,.0f")(Number(data2016[i].total)) + "</div>");
           }
         }
 
@@ -307,7 +312,7 @@ var zoom = d3.behavior.zoom()
 
 $(".zoom").click(function() {
   clicked2();
-  $(".info").html("");
+  $(".info").addClass("gone");
 });
 
 $(".mapSwitch").click(function() {
@@ -330,7 +335,7 @@ function clicked(d) {
     centered = null;
   }
 
-  d3.selectAll("#mapMetro path, #mapState path")
+  d3.selectAll("#mapSMetro path, #mapSState path, #mapHMetro path, #mapHState path")
       .classed("faded", false)
       .classed("active", false);
 
@@ -402,7 +407,6 @@ d3.helper.tooltip = function(accessor){
 
   mapBuild("#mapHMetro", "#infobox", "#chart", "mnleg_metro.json", "house", "metro", data2016, 0);
   mapBuild("#mapHState", "#infobox", "#chart", "mnleg.json", "house", "mn", data2016, 0);
-
   mapBuild("#mapSMetro", "#infobox", "#chart", "mnsenate_metro.json", "senate", "metro", data2016, 0);
   mapBuild("#mapSState", "#infobox", "#chart", "mnsenate.json", "senate", "mn", data2016, 0);
 
