--- a/20170212-absentee_students/builds/development/index.html
+++ b/20170212-absentee_students/builds/development/index.html
@@ -9,62 +9,17 @@
   <meta name="description" content="Absentee Students in Minneapolis">
   <meta name="author" content="Frey Hargarten - StarTribune">
   
-    <link rel="stylesheet" href="./_common_resources/styles/startribune_dataviz_styles.css" /> 
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   
 <style>
-      body { overflow-x:hidden; font-family: "Benton Sans",Helvetica,Arial,sans-serif !important; }
-      #wrapper { width:500px; margin-left:auto; margin-right:auto; }
-      #topChatter { height:120px; }
-      .block { width:20%; height:26px; display:inline-block; border:1px solid #ffffff; }
-      .block:hover { opacity:0.8; }
-      #topAxis { margin-bottom:15px; }
-      .topLabel { display:inline-block; font-weight:900; vertical-align:top; }
-      #gradeAxis { float:left; }
-      #grid { float:right; width:88%; text-align:center; }
-      .gradeLabel { width:15px; height:25px; margin-top:5.6px; border: 1px solid #ffffff; display: block; }
-      .raceAxis .block { border:1px solid #ffffff; width:20%; height:auto; text-align:center; }
-      .raceAxis .block:hover { opacity:1; cursor:default; }
-      .pct { font-weight:900; }
-      .legendBox {  margin-left:20px; text-align:center; }
-      .legends { margin-left:auto; margin-right:auto; width:500px; }
-      .legendContainer { margin-right:auto; margin-left:auto; width:100%; height:40px; text-align:center; padding-left:20%; }
 
-      #rightSide { width:88%; float:right; text-align:right; }
-
-      .grade { font-weight:900; }
-
-      #tracker { padding-top:10px; text-align:center; }
-      .trackDot { border-radius:50%; width:10px; height:10px; display:inline-block; margin:6px; background-color:#ddd; }
-      .trackDot:hover, .current { background-color:#333; cursor:pointer; }
-
-      .chatter { height:80px; }
-
-      .fadeout { opacity:0; transition: opacity .50s ease-in-out; -moz-transition: opacity .50s ease-in-out; -webkit-transition: opacity .50s ease-in-out; }
-
-      .play { background-color:#fff !important; color:#000; }
-      .pause { background-color:#fff !important; color:#000; }
-      #toggle { margin:0; padding:0; width:80px; height:35px; font-size:2em; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0; font-weight:900; margin-left:auto; margin-right:auto; display:block; text-align:center; }
-      #toggle:hover { background-color:#ffffff !important; opacity:0.8; cursor:pointer; }
-      .navButtons { display:block; text-align:center; background-color:#fff !important; width:40px; font-size:2em; -moz-border-radius:0; -webkit-border-radius:0; border-radius:0; border:0; font-weight:900; }
-      .navButtons:hover { opacity:0.8; cursor:pointer; }
-      .previous { float:left; }
-      .next { float:right; }
-
-      .gray6 { background-color:#000000; }
-
-      @media (max-width:500px) {
-        #wrapper { width:100%; }
-        .block, .topLabel { font-size:0.8em; }
-        .gradeLabel { height:24px; }
-        #mobileHide { display:none; }
-      }
 </style>
 </head>
 
 <body>
 <div id="wrapper">
-
+<!-- 
 <div id="mobileHide">
 <div id="tracker">
 <div class="trackDot" id="d0" index="0"></div>
@@ -80,10 +35,10 @@
 <div class="breaker"></div>
 <div class="chartTitle" id="headline">headline</div>
 <div class="chatter" id="text">top chatter</div>
-</div>
+</div> -->
 
 <div id="topAxis">
-  <div class="topLabel">Grade</div>
+  <div class="topLabel" id="grades">Grade</div>
 
   <div class="topLabel" id="rightSide">
   <div class="raceAxis" class=""><div class="block">Native</div><div class="block">Black</div><div class="block">Hispanic</div><div class="block">Asian</div><div class="block">White</div></div>
@@ -135,214 +90,11 @@
 
 </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="./_common_resources/js/d3-master/d3.min.js" charset="utf-8"></script>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="//code.jquery.com/jquery-latest.js"></script>
+<script src="../_common_resources/js/d3-master/d3.min.js" charset="utf-8"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
-d3.json("./data/absentee_students.json", function(error, dataLoad) {
-d3.json("./data/chatter.json", function(error, dataLoadC) {
 
-var data = dataLoad.rates;
-var dataChatter = dataLoadC.text;
+<script src="js/script.js"></script>
 
-$(".thisSwitch a").click(function() {
-
-
-});
-
-buildGrid("K");
-buildGrid(1);
-buildGrid(2);
-buildGrid(3);
-buildGrid(4);
-buildGrid(5);
-buildGrid(6);
-buildGrid(7);
-buildGrid(8);
-buildGrid(9);
-buildGrid(10);
-buildGrid(11);
-buildGrid(12);
-
-$(document).tooltip();
-
-function buildGrid(grade){
-
-d3.select("#g" + grade).selectAll(".block")
-.data(data.filter(function(d){ return d.grade == grade; })).enter().append("div")
-// .call(d3.helper.tooltip(function(d, i){
-//         return "tips";
-// }))
-.attr("title",function (d) { return Math.round(d.pct) + "% " + String(d.race).toLowerCase() + "s absent in Grade " + d.grade; })
-.attr("id",function (d) { return d.race + "_" + d.grade; })
-.attr("class",function (d) { 
-
-  var colorClass = "";
-
-  if (d.race == "Black"){
-    if (d.pct > 50) { colorClass = "gray6"; }
-    else if (d.pct > 40) { colorClass = "gray5"; }
-    else if (d.pct > 30) { colorClass = "gray4"; }
-    else if (d.pct > 20) { colorClass = "gray3"; }
-    else if (d.pct > 10) { colorClass = "gray2"; }
-    else if (d.pct > 0) { colorClass = "gray1"; }
-  }
-  if (d.race == "Native"){
-    if (d.pct > 50) { colorClass = "gray6"; }
-    else if (d.pct > 40) { colorClass = "gray5"; }
-    else if (d.pct > 30) { colorClass = "gray4"; }
-    else if (d.pct > 20) { colorClass = "gray3"; }
-    else if (d.pct > 10) { colorClass = "gray2"; }
-    else if (d.pct > 0) { colorClass = "gray1"; }
-  }
-  if (d.race == "Hispanic"){
-    if (d.pct > 50) { colorClass = "gray6"; }
-    else if (d.pct > 40) { colorClass = "gray5"; }
-    else if (d.pct > 30) { colorClass = "gray4"; }
-    else if (d.pct > 20) { colorClass = "gray3"; }
-    else if (d.pct > 10) { colorClass = "gray2"; }
-    else if (d.pct > 0) { colorClass = "gray1"; }
-  }
-  if (d.race == "Asian"){
-    if (d.pct > 50) { colorClass = "gray6"; }
-    else if (d.pct > 40) { colorClass = "gray5"; }
-    else if (d.pct > 30) { colorClass = "gray4"; }
-    else if (d.pct > 20) { colorClass = "gray3"; }
-    else if (d.pct > 10) { colorClass = "gray2"; }
-    else if (d.pct > 0) { colorClass = "gray1"; }
-  }
-  if (d.race == "White"){
-    if (d.pct > 50) { colorClass = "gray6"; }
-    else if (d.pct > 40) { colorClass = "gray5"; }
-    else if (d.pct > 30) { colorClass = "gray4"; }
-    else if (d.pct > 20) { colorClass = "gray3"; }
-    else if (d.pct > 10) { colorClass = "gray2"; }
-    else if (d.pct > 0) { colorClass = "gray1"; }
-  }  
-
-  var slideClasses = "slide1";
-
-  if (d.grade == "K" || d.grade == 1 || d.grade == 9 || d.grade == 10 || d.grade == 11 || d.grade == 12) { slideClasses += " slide2 "; }
-  if (d.race == "Black" || d.race == "Hispanic" || d.race == "Native") { slideClasses += " slide3 "; }
-
-  return slideClasses + colorClass + " block"; 
-
-})
-.html(function (d){ 
-  return " ";});
-
-d3.helper = {};
-
-d3.helper.tooltip = function(accessor){
-    return function(selection){
-        var tooltipDiv;
-        var bodyNode = d3.select('body').node();
-        selection.on("mouseover", function(d, i){
-            // Clean up lost tooltips
-            d3.select('body').selectAll('div.tooltip').remove();
-            // Append tooltip
-            tooltipDiv = d3.select('body').append('div').attr('class', 'tooltip');
-            var absoluteMousePos = d3.mouse(bodyNode);
-            tooltipDiv.style('left', (absoluteMousePos[0] + 10)+'px')
-                .style('top', (absoluteMousePos[1] - 15)+'px')
-                .style('position', 'absolute') 
-                .style('z-index', 1001);
-            // Add text using the accessor function
-            var tooltipText = accessor(d, i) || '';
-            // Crop text arbitrarily
-            //tooltipDiv.style('width', function(d, i){return (tooltipText.length > 80) ? '300px' : null;})
-            //    .html(tooltipText);
-        })
-        .on('mousemove', function(d, i) {
-            // Move tooltip
-            var absoluteMousePos = d3.mouse(bodyNode);
-            tooltipDiv.style('left', (absoluteMousePos[0] + 10)+'px')
-                .style('top', (absoluteMousePos[1] - 15)+'px');
-            var tooltipText = accessor(d, i) || '';
-            tooltipDiv.html(tooltipText);
-        })
-        .on("mouseout", function(d, i){
-            // Remove tooltip
-            tooltipDiv.remove();
-        });
-
-    };
-};
-
-}
-
-var timer = [];
-
-function play(j,timeout){
- timer[j] = window.setTimeout(function() { playback(j); }, timeout); 
-}
-
-function stop(){
-  for (var i=0; i<dataChatter.length; i++){
-     clearTimeout(timer[i]);
-  }
-}
-
-function playback(index){
-    $("#headline").text(dataChatter[index].headline)
-    $("#text").text(dataChatter[index].text)
-    $(".trackDot").removeClass("current");
-    $("#d" + index).addClass("current");
-
-    $(".slide1, .slide2, .slide3, .slide4").addClass("fadein, fadeout");
-    $(".slide1, .slide2, .slide3, .slide4").addClass("fadeout");
-    $(".slide" + (index + 1)).removeClass("fadeout");
-}
-
-  playback(0);
-
-  $("#info").show();
-
-var index = 0;
-$(document).ready(function() {
-        $('#toggle').bind("click", function() {
-          if ($(this).attr("class") == "play myButton2") {
-             $(this).attr("class", "pause myButton2");
-             $(this).html("&#9724;");
-             for (var j=0; j<data.length; j++){ play(j,j*3300); if (index < 4) { index++; } }
-         }
-          else {
-             $(this).attr("class", "play myButton2");
-             $(this).html("&#9658;");
-             stop();
-           }
-        });
-      });
-
-$(".previous").click(function() {
-  if (index > 0) {
-  index--;
-  stop();
-  playback(index);
-}
-  });
-
-$(".next").click(function() {
-  if (index < 4) {
-  stop();
-  index++;
-  playback(index);
-}
-  });
-
-$(".trackDot").click(function() {
-  $("#toggle").attr("class", "play myButton2");
-  $("#toggle").html("&#9658;");
-  $(".trackDot").removeClass("current");
-  $(this).addClass("current");
-  stop();
-  index = Number($(this).attr("index"));
-  playback(Number($(this).attr("index")));
-});
-
-});
-});
-</script>
 </body>
 </html>
