--- a/20170212-absentee_students/builds/development/index.html
+++ b/20170212-absentee_students/builds/development/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
-<script src="../_common_resources/js/d3-master/d3.min.js" charset="utf-8"></script>
+<script src="./_common_resources/js/d3-master/d3.min.js" charset="utf-8"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <script src="js/script.js"></script>
