--- a/20160218-adverse_events/index.html
+++ b/20160218-adverse_events/index.html
@@ -63,7 +63,7 @@
 <div id="chart"></div>
 
 <div class="chartTitle">Search the state’s database by hospital or by adverse event</div>
-<div class="chatter">Data contains reports filed between 2005 and 2017 that describe events spanning through 2016. </div>
+<div class="chatter">Data contains reports filed between 2005 and 2017 that describe events spanning 2004 through 2016. </div>
 
 <div id="filter"><input type="search" id="filter_box" placeholder="Search table by keyword" /></div>
 
