--- a/20170305-housing_recovery/builds/development/index.html
+++ b/20170305-housing_recovery/builds/development/index.html
@@ -35,8 +35,8 @@
     <span style='background:#bd0026;'></span>
     <span style='background:#fff;'>More</span>
     <span style='background:#fff;'></span>
-    <span style='background:#888888;'></span>
-    <span style='background:#fff;'>None</span>
+<!--     <span style='background:#888888;'></span>
+    <span style='background:#fff;'></span> -->
   </nav>
 </span>
 </div>
@@ -59,7 +59,7 @@
   </div>
   <div class="metricCol">
     <div class="metric" id="homes">0%</div>
-    <div class="metricLabel">sngl-family homes</div>
+    <div class="metricLabel">single-family homes</div>
   </div>
   <div class="metricCol">
     <div class="metric" id="kids">0%</div>
@@ -108,8 +108,7 @@
 
 <div style="margin:5px; clear:both;"></div>
 
-<div id="source">All data come from MAAR and RMLS of MN, Inc. Data deemed reliable but not guaranteed. Not to be reproduced without MAAR’s consent. <a href="http://www.mplsrealtor.com/" target="new_">Minneapolis Area Association of Realtors</a></div>
-
+<div class="mobilekill"><span style='background:#888888;'>Gray</span> cities on map not included due to less than 100 sales.</div>
 
 </div>
 
