--- a/coaches_grid/index.html
+++ b/coaches_grid/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <head>
@@ -407,7 +408,7 @@
                     }
                 })
                 .attr("class", function(d, i) {
-                    if (d === "Tubby Smith" || d === "Dennis Felton" || d === "Frank Haith" || d === "Wade Houston" || d === "Cuonzo Martin" || d === "Anthony Grant" || d === "Avery Johnson" || d === "Nolan Richardson" || d === "Stan Heath" || d === "Mike Anderson" || d === "Tony Barbee" || d === "Trent Johnson" || d === "Johnny Jones" || d === "Rob Evans" || d === "Rod Barnes" || d === "Rick Ray") {
+                    if (d === "Tubby Smith" || d === "Dennis Felton" || d === "Frank Haith" || d === "Wade Houston" || d === "Cuonzo Martin" || d === "Anthony Grant" || d === "Avery Johnson" || d === "Nolan Richardson" || d === "Stan Heath" || d === "Mike Anderson" || d === "Tony Barbee" || d === "Trent Johnson" || d === "Johnny Jones" || d === "Rob Evans" || d === "Rod Barnes" || d === "Rick Ray" ||d === "Frank Martin") {
                         var newClass = "";
                         if (i > 0 && i <= 20) {
                             newClass = " colHide";
