--- a/coaches_grid/index.html
+++ b/coaches_grid/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <head>
@@ -87,6 +86,10 @@
     button:hover {
         background: #999;
         color: #ffffff;
+    }
+
+    button:focus {
+      outline: 0 !important;
     }
     
     .active {
@@ -232,8 +235,7 @@
     </div>
     <div id="container"></div>
     <div class="footnote">Each column includes the schools that were in the conferences for that year. Each year represents the year the season began. For example, the column marked '80 represents the 1980-1981 season. Schools in the Big 8, which became the Big 12 in 1996, are included under the Big 12. Graphic by Ethan Nelson, a University of Minnesota student reporter on assignment for Star Tribune.</div>
-  
-<script>
+   <script>
     $('button').click(function() {
         $('button').removeClass('active')
         $(this).addClass('active');
@@ -1014,27 +1016,27 @@
                     }
                 })
                 .attr("class", function(d, i) {
-                    if (d === "Harry Miller" || d === "Wayne Morgan" || d === "Kelvin Sampson" || d === "Shaka Smart" || d === "Trent Johnson" || d === "Chris Walker" || d === "Tubby Smith" || d === "Mike Anderson" || d === "Frank Haith" || d === "Melvin Watkins" || d === "Ricardo Patton" || d === "Leonard Hamilton") {
+                    if (d === "Harry Miller" || d === "Wayne Morgan" || d === "Kelvin Sampson" || d === "Shaka Smart" || d === "Trent Johnson" || d === "Chris Walker" || d === "Tubby Smith" || d === "Mike Anderson" || d === "Frank Haith" || d === "Melvin Watkins" || d === "Ricardo Patton" || d === "Leonard Hamilton" || d === "Jeff Capel") {
                         var newClass = "";
-                        if (i > 0 && i < 5) {
+                        if (i > 0 && i <= 20) {
                             newClass = " colHide";
                         }
                         return "black" + newClass;
                     } else if (d == "") {
                         var newClass = "";
-                        if (i > 0 && i < 5) {
+                        if (i > 0 && i <= 20) {
                             newClass = " colHide";
                         }
                         return "none" + newClass;
                     } else if (d === "Baylor" || d === "Iowa State" || d === "Kansas" || d === "Kan. St." || d === "Oklahoma" || d === "Okla. St." || d === "Texas" || d === "TCU" || d === "Texas Tech" || d === "W. Virginia" || d === "Missouri" || d === "Texas A&M" || d === "Nebraska" || d === "Colorado") {
                         var newClass = "";
-                        if (i > 0 && i < 5) {
+                        if (i > 0 && i <= 20) {
                             newClass = " colHide";
                         }
                         return "school" + newClass;
                     } else {
                         var newClass = "";
-                        if (i > 0 && i < 5) {
+                        if (i > 0 && i <= 20) {
                             newClass = " colHide";
                         }
                         return "white" + newClass;
