--- a/20170305-housing_recovery/builds/development/index.html
+++ b/20170305-housing_recovery/builds/development/index.html
@@ -20,8 +20,9 @@
 <div class="smallBreak" class="mobilekill"></div>
 
 <div id="reference" class="mobilekill">
+
 <div id="legendContainer">
-<h5>Housing Market Index</h5>
+    <h5>Housing Market Index</h5>
 <div id="quantize">
 <span class='legend'>
   <nav class='legend clearfix'>
@@ -33,17 +34,21 @@
     <span style='background:#a50f15;'></span>
     <span style='background:#fff;'>Hotter</span>
     <span style='background:#fff;'></span>
-<!--     <span style='background:#888888;'></span>
-    <span style='background:#fff;'></span> -->
   </nav>
 </span>
 </div>
 </div>
 
-<div class="zoom">Reset View</div>
+<div class="onoffswitch">
+    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+    <label class="onoffswitch-label" for="myonoffswitch">
+        <span class="onoffswitch-inner"></span>
+        <span class="onoffswitch-switch"></span>
+    </label>
+</div>
 </div>
 
-<div style="margin:50px; clear:both;" class="mobilekill"></div>
+<div style="margin:45px; clear:both;" class="mobilekill"></div>
 
 <div id="metrics">
 <div id="districtName"></div>
@@ -98,6 +103,14 @@
 
 <div id="chart" class="mobilekill"></div>
 
+</div>
+
+<div class="onoffswitch mobileshow">
+    <input type="checkbox" name="onoffswitch2" class="onoffswitch-checkbox" id="myonoffswitch2" checked>
+    <label class="onoffswitch-label" for="myonoffswitch2">
+        <span class="onoffswitch-inner"></span>
+        <span class="onoffswitch-switch"></span>
+    </label>
 </div>
 
 <div id="listing">
