--- a/20170305-housing_recovery/builds/development/index.html
+++ b/20170305-housing_recovery/builds/development/index.html
@@ -27,11 +27,11 @@
 <span class='legend'>
   <nav class='legend clearfix'>
     <span style='background:#fff;'>Cooler</span>
-    <span style='background:#fcbba1;'></span>
-    <span style='background:#fc9272;'></span>
-    <span style='background:#fb6a4a;'></span>
-    <span style='background:#de2d26;'></span>
-    <span style='background:#a50f15;'></span>
+    <span style='background:#fee391;'></span>
+    <span style='background:#fec44f;'></span>
+    <span style='background:#fe9929;'></span>
+    <span style='background:#d95f0e;'></span>
+    <span style='background:#993404;'></span>
     <span style='background:#fff;'>Hotter</span>
     <span style='background:#fff;'></span>
   </nav>
