--- a/20170305-housing_recovery/builds/development/index.html
+++ b/20170305-housing_recovery/builds/development/index.html
@@ -63,7 +63,7 @@
   </div>
   <div class="metricCol">
     <div class="metric" id="change">0%</div>
-    <div class="metricLabel">change in price per sqft*</div>
+    <div class="metricLabel">change in price per square foot*</div>
   </div>
   <div class="metricCol">
     <div class="metric" id="distressed">0%</div>
