--- a/20170305-housing_recovery/builds/development/index.html
+++ b/20170305-housing_recovery/builds/development/index.html
@@ -15,7 +15,7 @@
  
 <div id="wrapper">
 
-<div id="map" class="mobilekill"></div>
+<!-- <div id="map" class="mobilekill"></div> -->
 
 <div class="smallBreak" class="mobilekill"></div>
 
