--- a/20150103-bridges/index.html
+++ b/20150103-bridges/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20150103-bridges/builds/production'" />
+	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20150103-bridges/'" />
 </head>
 </html>
