--- a/20150111-econ/index.html
+++ b/20150111-econ/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20150111-econ/builds/production'" />
+	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20150111-econ/'" />
 </head>
 </html>
