--- a/20151206-divide/index.html
+++ b/20151206-divide/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20151206-divide/builds/production'" />
+	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20151206-divide/'" />
 </head>
 </html>
