--- a/20161101-solitary/index.html
+++ b/20161101-solitary/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20161101-solitary/builds/production'" />
+	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20161101-solitary/'" />
 </head>
 </html>
