--- a/20140927-cpa/index.html
+++ b/20140927-cpa/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20140927-cpa/'" />
+	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20140927-cpa/builds/production'" />
 </head>
 </html>
