--- a/20141228-mfcu/index.html
+++ b/20141228-mfcu/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20141228-mfcu/'" />
+	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20141228-mfcu/builds/production'" />
 </head>
 </html>
