--- a/20150809-payday/index.html
+++ b/20150809-payday/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20150809-payday/'" />
+	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20150809-payday/builds/production'" />
 </head>
 </html>
