--- a/20160616-eat_duluth/index.html
+++ b/20160616-eat_duluth/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/eat_duluth/?location=duluth'" />
+	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/20160616-eat_duluth/builds/production?location=duluth'" />
 </head>
 </html>
