--- a/20160808-vikings2016/index.html
+++ b/20160808-vikings2016/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/vikings2016//'" />
+	<meta http-equiv="refresh" content="0; URL='http://dataviz-dev.startribune.com/vikings2016/builds/production/'" />
 </head>
 </html>
