--- a/20170615-zebra/builds/development/index.html
+++ b/20170615-zebra/builds/development/index.html
@@ -130,6 +130,7 @@
 <script src="js/d3.v3.min.js"></script>
 <script src='js/mapbox-gl.js'></script>
 <script src='js/jquery.fullpage.min.js'></script>
+<script src="js/typed.min.js"></script> 
 
 <script src="js/script.js"></script>
 
