--- a/20170514-farmers_markets/builds/development/index.html
+++ b/20170514-farmers_markets/builds/development/index.html
@@ -14,6 +14,8 @@
 
 <div id="wrapper">
 
+    <!-- 421381523 -->
+
 <div id="rightSide">
 <div id="map"></div>
 
@@ -78,20 +80,12 @@
         <div class="check toggle selected" layer="friday">Friday</div>
         <div class="check toggle selected" layer="saturday">Saturday</div>
         <div class="check toggle selected" layer="sunday">Sunday</div>
+        
+      </div>
+      <div class="column" style="text-align:center;">
+<!--         <div id="today">What's open today?</div> -->
         <div class="zoom" latitude="0" longitude="0">See All</div>
       </div>
-<!--       <div class="column">
-        <div class="check">Minneapolis</div>
-        <div class="check">St. Paul</div>
-        <div class="check" latitude="0" longitude="0">Hennepin</div>
-        <div class="check" latitude="0" longitude="0">Ramsey</div>
-        <div class="check" latitude="0" longitude="0">Anoka</div>
-        <div class="check" latitude="0" longitude="0">Carver</div>
-        <div class="check" latitude="0" longitude="0">Dakota</div>
-        <div class="check" latitude="0" longitude="0">Scott</div>
-        <div class="check" latitude="0" longitude="0">Washington</div>
-        
-      </div> -->
     </div>
 </div>
 
