--- a/20170514-farmers_markets/builds/development/index.html
+++ b/20170514-farmers_markets/builds/development/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8' />
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <title>Taste Farmer's Markets Guide</title>
+    <title>Taste Farmers Markets Guide</title>
     <meta name="description" content="Taste Farmer's Markets Guide">
     <meta name="author" content="Frey Hargarten - StarTribune">
 
