--- a/20170514-farmers_markets/builds/development/index.html
+++ b/20170514-farmers_markets/builds/development/index.html
@@ -84,7 +84,9 @@
       </div>
       <div class="column" style="text-align:center;">
 <!--         <div id="today">What's open today?</div> -->
-        <div class="zoom" latitude="0" longitude="0">See All</div>
+        <div class="zoom">See All</div>
+        <div class="clear">Clear All</div>
+        <div class="showing">Showing <span class="number">86</span> results</div>
       </div>
     </div>
 </div>
